--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <base href="http://h5.hunlipic.com/biaobai_aixinshu/"/>
     <title>情人节快乐</title>
     <link type="text/css" rel="stylesheet" href="css/default.css">
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/jscex.min.js"></script>
-    <script type="text/javascript" src="js/jscex-parser.js"></script>
-    <script type="text/javascript" src="js/jscex-jit.js"></script>
-    <script type="text/javascript" src="js/jscex-builderbase.min.js"></script>
-    <script type="text/javascript" src="js/jscex-async.min.js"></script>
-    <script type="text/javascript" src="js/jscex-async-powerpack.min.js"></script>
-    <script type="text/javascript" src="js/functions.js" charset="utf-8"></script>
-    <script type="text/javascript" src="js/love.js" charset="utf-8"></script>
+    <script type="text/javascript" src="jquery.min.js"></script>
+    <script type="text/javascript" src="jscex.min.js"></script>
+    <script type="text/javascript" src="jscex-parser.js"></script>
+    <script type="text/javascript" src="jscex-jit.js"></script>
+    <script type="text/javascript" src="jscex-builderbase.min.js"></script>
+    <script type="text/javascript" src="jscex-async.min.js"></script>
+    <script type="text/javascript" src="jscex-async-powerpack.min.js"></script>
+    <script type="text/javascript" src="functions.js" charset="utf-8"></script>
+    <script type="text/javascript" src="love.js" charset="utf-8"></script>
     <style type="text/css">
         <!--
         .STYLE1 {
